# oop_lab5

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: dyn_array.hpp  iterator.hpp  memory_resource.hpp
src/: memory_resource.cpp
tests/: dyn_array_test.cpp  iterator_test.cpp  memory_resource_test.cpp
